# docs/swagger.json
@@ -37,7 +37,7 @@
                 "summary": "Create a new Storage Blob",
                 "parameters": [
                     {
-                        "description": "query params",
+                        "description": "Details of the blob",
                         "name": "json",
                         "in": "body",
                         "required": true,
@@ -48,13 +48,13 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Blob is created successfully",
                         "schema": {
-                            "$ref": "#/definitions/blobs.Blob"
+                            "$ref": "#/definitions/blobs.SuccessResponse-blobs_Blob"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "There was an error creating the blob",
                         "schema": {
                             "$ref": "#/definitions/blobs.FailureResponse"
                         }
@@ -102,6 +102,14 @@
                     "items": {
                         "$ref": "#/definitions/blobs.Blob"
                     }
+                }
+            }
+        },
+        "blobs.SuccessResponse-blobs_Blob": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/blobs.Blob"
                 }
             }
         }
